# Clippos

./: .env.example  .gitignore  HERMES_SETUP.md  LICENSE  README.md  SKILL.md  install.sh  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
commands/: clip-config.md  clip-package.md  clip.md  clippos-config.md  clippos-package.md  clippos.md
docs/: miner-quality.md  pre-ship-fixes.md  v1.1.md
docs/architecture/: agent-skill.md  job-spec.md  package-handoff.md  render-manifest.md  review-manifest.md  scoring-handoff.md
docs/superpowers/plans/: 2026-04-23-clipping-engine-v1.md
docs/superpowers/specs/: 2026-04-23-clipping-engine-design.md
scripts/: bootstrap-venv.sh  clip_skill.py  clippos_skill.py  hermes_clip.py  hermes_clippos.py
src/clipper/: __init__.py  cli.py
src/clipper/adapters/: brief.py  ffmpeg_render.py  ffmpeg_resolver.py  one_euro.py  rubric.py  speechbrain_diarize.py  vision.py  whisperx.py
src/clipper/models/: analysis.py  candidate.py  job.py  package.py  render.py  review.py  scoring.py
src/clipper/pipeline/: brief.py  candidates.py  caption_styles.py  captions.py  creator_profile.py  crops.py  ingest.py  orchestrator.py  packaging.py  render.py  review.py  scene_strategy.py  scoring.py  transcribe.py  vision.py
src/clipper/wrappers/: claude_code.py  codex.py  common.py  hermes.py
src/clippos/: __init__.py  cli.py
src/clippos/adapters/: brief.py  ffmpeg.py  ffmpeg_render.py  harness_model.py  rubric.py  speechbrain_diarize.py  storage.py  vision.py  whisperx.py
src/clippos/models/: analysis.py  candidate.py  job.py  media.py  package.py  render.py  review.py  scoring.py
src/clippos/pipeline/: brief.py  candidates.py  caption_styles.py  captions.py  crops.py  fingerprint.py  ingest.py  orchestrator.py  packaging.py  render.py  review.py  scene_strategy.py  scoring.py  transcribe.py  vision.py
src/clippos/wrappers/: claude_code.py  codex.py  common.py  hermes.py
tests/: conftest.py  test_cli.py  test_skill_files.py  test_wrappers.py
tests/adapters/: test_ffmpeg.py  test_ffmpeg_render.py  test_ffmpeg_resolver.py  test_one_euro.py  test_rubric.py  test_speechbrain_diarize.py  test_vision_adapter.py  test_whisperx.py
tests/e2e/: test_real_video_pipeline.py
tests/fixtures/: sample_faces.json  sample_job.json  sample_transcript.json
tests/models/: test_job_models.py  test_package.py  test_scoring_contracts.py
tests/pipeline/: test_brief.py  test_candidates.py  test_caption_styles.py  test_captions.py  test_creator_profile.py  test_crops.py  test_e2e_smoke.py  test_fingerprint.py  test_ingest.py  test_orchestrator.py  test_packaging.py  test_render.py  test_review.py  test_scene_strategy.py  test_scoring.py  test_transcribe.py  test_vision.py
tests/scripts/: test_clip_skill.py  test_hermes_clip.py
