[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clipper-tool"
dynamic = ["version"]
requires-python = ">=3.12"
dependencies = ["typer>=0.12", "pydantic>=2.7"]

[project.optional-dependencies]
engine = [
    "whisperx>=3.1",
    # Open-source diarization stack (zero-config, default).
    "speechbrain>=1.0",
    "silero-vad>=5",
    "scikit-learn>=1.3",
    # pyannote stays as the opt-in upgrade for users who already have an HF
    # token + license acceptance for pyannote/speaker-diarization-3.1.
    "pyannote.audio>=3.1",
    "opencv-python>=4.9",
    "scenedetect[opencv]>=0.6.4",
    "retina-face>=0.0.17",
    "tf-keras>=2.16",
    "torch>=2.2",
    "torchvision>=0.17",
    "numpy>=1.26",
]
dev = ["pytest>=8.2", "pytest-cov>=5.0", "ruff>=0.4"]

[project.scripts]
clipper-tool = "clipper.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "clipper.__version__"}

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = [
    "e2e: real-video pipeline tests that require engine extras, FFmpeg, and HF_TOKEN",
]
