[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clipper-tool"
dynamic = ["version"]
# TensorFlow wheels (pulled transitively via retina-face) cap at 3.12,
# so the only resolvable interpreter is 3.12.x. Users on 3.13+ would
# otherwise get past install validation and crash deep inside pip's
# resolver on opaque TF wheel errors.
requires-python = ">=3.12,<3.13"
dependencies = ["typer>=0.12", "pydantic>=2.7"]

[project.optional-dependencies]
# Pinned to a coexisting set, dogfood-verified 2026-04-25. The previous
# torch 2.3 / whisperx 3.3.6 set ran in an already-warmed pip env, but fresh
# uv/pip resolution is impossible because whisperx declares torch>=2.5.1.
# Keep these as a batch; changing one usually forces the whole ASR stack.
engine = [
    # Torch / vision stack. WhisperX 3.8.x and pyannote.audio 4.x agree on
    # torch/torchaudio 2.8, which resolves cleanly under uv and pip.
    "torch==2.8.0",
    "torchaudio==2.8.0",
    "torchvision==0.23.0",

    # ASR stack. Hold transformers <5 until the WhisperX compatibility
    # surface is verified against a real-video run.
    "whisperx==3.8.5",
    "transformers>=4.48,<5",

    # Open-source diarization stack (zero-config, default). speechbrain
    # 1.x moved EncoderClassifier to .inference.speaker; the adapter
    # has a try/except fallback to .pretrained for 0.5.x compatibility.
    "speechbrain>=1.0,<2",
    "silero-vad>=5",
    "scikit-learn>=1.3",

    # Vendored ffmpeg + ffprobe with libass, used as a fallback when the
    # system ffmpeg lacks the `ass` subtitle filter. Downloads the
    # platform-specific binary on first use (~50 MB).
    "static-ffmpeg>=3.0",

    # pyannote stays as the opt-in upgrade for users who already have an
    # HF token + license acceptance for pyannote/speaker-diarization.
    "pyannote.audio>=4.0,<5",

    # Vision stack.
    "opencv-python>=4.9",
    "scenedetect[opencv]>=0.6.4",
    "retina-face>=0.0.17",
    "tf-keras>=2.16",

    # Undeclared deps the engine actually needs at import time.
    # whisperx 3.x imports matplotlib without declaring it.
    "matplotlib>=3.7",

    "numpy>=2.1",
]
dev = ["pytest>=8.2", "pytest-cov>=5.0", "ruff>=0.4"]

[project.scripts]
clipper-tool = "clipper.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "clipper.__version__"}

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = [
    "e2e: real-video pipeline tests that require engine extras, FFmpeg, and HF_TOKEN",
]
